# flowwire

./: Cargo.toml  README.md
configs/: audio.toml  default.toml  gui.toml  video.toml
crates/flowwire-audio/: Cargo.toml
crates/flowwire-audio/src/: capture.rs  dsp.rs  mixer.rs  playback.rs  resampler.rs
crates/flowwire-core/: Cargo.toml
crates/flowwire-core/src/: edge.rs  event_bus.rs  graph.rs  lib.rs  node.rs  scheduler.rs  topology.rs
crates/flowwire-daemon/: Cargo.toml
crates/flowwire-daemon/src/: config.rs  discovery.rs  main.rs  routing.rs  service.rs
crates/flowwire-gui/: Cargo.toml
crates/flowwire-gui/src/: main.rs
crates/flowwire-ipc/: Cargo.toml
crates/flowwire-ipc/src/: message.rs  protocol.rs  rpc.rs  socket.rs
crates/flowwire-midi/: Cargo.toml
crates/flowwire-midi/src/: device.rs  parser.rs  router.rs  virtual_port.rs
crates/flowwire-plugins/: Cargo.toml
crates/flowwire-plugins/src/: api.rs  loader.rs  manager.rs
crates/flowwire-video/: Cargo.toml
crates/flowwire-video/src/: camera.rs  compositor.rs  encoder.rs  stream.rs
docs/: architecture.md  developer_guide.md  gui_design.md  protocol.md  routing_engine.md  security.md
examples/: midi_router.rs  simple_audio_route.rs  video_stream.rs  virtual_mic.rs
plugins/: Cargo.toml
plugins/src/: Cargo.toml  api.rs  loader.rs
plugins/test_plugin/: Cargo.toml
plugins/test_plugin/src/: lib.rs
scripts/: benchmark.sh  build.sh  install.sh
systemd/: flowwire.service  flowwire.socket
tests/: latency_tests.rs  plugin_tests.rs  routing_tests.rs  stress_tests.rs
(+10 files in other folders)
