[workspace]
resolver = "2"

members = [
    "crates/flowwire-core",
    "crates/flowwire-audio",
    "crates/flowwire-midi",
    "crates/flowwire-video",
    "crates/flowwire-ipc",
    "crates/flowwire-daemon",
    "crates/flowwire-gui",
    "crates/flowwire-plugins"
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
