[package]
name = "flowwire-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Core graph and routing engine for FlowWire"
license = "MIT"
repository = "https://github.com/username/flowwire"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
